changing vendr name to wearebraid

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "braid/piction",
+    "name": "wearebraid/piction",
     "description": "Piction API library",
     "type": "laravel",
     "authors": [
